--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,31 @@
-cmake_minimum_required(VERSION 3.0.0)
+cmake_minimum_required(VERSION 3.13.0)
 project(DX12Lib VERSION 0.1.0)
 
 include(CTest)
 enable_testing()
 
-add_executable(DX12Lib main.cpp)
+ADD_DEFINITIONS(-D_AFXDLL)
+ADD_DEFINITIONS(-DWIN32)
+ADD_DEFINITIONS(-D_UNICODE)
+ADD_DEFINITIONS(-DUNICODE)
+ADD_DEFINITIONS(-D_DEBUG)
+ADD_DEFINITIONS(-D_WINDOWS)
+
+set(CMAKE_MFC_FLAG 2)
+
+set(ROOT_FOLDER ${PROJECT_SOURCE_DIR}/..)
+include_directories(${PROJECT_SOURCE_DIR})
+
+
+add_executable(DX12Lib WIN32 main.cpp
+    Application.cpp
+    DXApp.cpp
+    DXAppImplementation.cpp)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
+
+target_link_options(${PROJECT_NAME} PRIVATE "/entry:WinMainCRTStartup")
+target_link_libraries(${PROJECT_NAME} d3d12.lib)
+target_link_libraries(${PROJECT_NAME} dxgi.lib)
