added filesystem, fixed includes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ ADD_DEFINITIONS(-D_WINDOWS)
 
 # VARs
 set(CMAKE_MFC_FLAG 2)
+set(CMAKE_CXX_STANDARD 17) # no need to manually adjust the CXXFLAGS
 # set(ROOT_FOLDER ${PROJECT_SOURCE_DIR}/..)
 set(ROOT_FOLDER ${PROJECT_SOURCE_DIR})
 set(THIRD_PARTY_DIR ${ROOT_FOLDER}/thirdParty)
