--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,6 +88,7 @@
         "xtree": "cpp",
         "xutility": "cpp",
         "filesystem": "cpp",
-        "*.idl": "cpp"
+        "*.idl": "cpp",
+        "*.inc": "cpp"
     }
 }
