--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ ADD_DEFINITIONS(-D_UNICODE)
 ADD_DEFINITIONS(-DUNICODE)
 ADD_DEFINITIONS(-D_DEBUG)
 ADD_DEFINITIONS(-D_WINDOWS)
+# ADD_DEFINITIONS(-DUSE_PIX_DEBUG)
 
 # VARs
 set(CMAKE_MFC_FLAG 2)
@@ -25,6 +26,7 @@ include_directories(${CMAKE_BINARY_DIR}/thirdParty/assimp/include)
 include_directories(${THIRD_PARTY_DIR}/DirectXTK12/Inc)
 include_directories(${THIRD_PARTY_DIR}/DirectXShaderCompiler/inc)
 include_directories(${THIRD_PARTY_DIR}/rapidjson/include)
+include_directories(${THIRD_PARTY_DIR}/winpixeventruntime/Include)
 # message(STATUS "foo include dir: ${THIRD_PARTY_DIR}/assimp/include")
 # include_directories("C:\\code\\DX12Lib\\thirdParty\\assimp\\include")
 
@@ -61,10 +63,12 @@ target_link_libraries(${PROJECT_NAME} dxgi.lib)
 target_link_libraries(${PROJECT_NAME} ${CMAKE_BINARY_DIR}/thirdParty/assimp/lib/$<CONFIGURATION>/assimp-vc143-mtd.lib)
 target_link_libraries(${PROJECT_NAME} ${CMAKE_BINARY_DIR}/bin/CMake/$<CONFIGURATION>/DirectXTK12d.lib)
 target_link_libraries(${PROJECT_NAME} ${THIRD_PARTY_DIR}/DirectXShaderCompiler/lib/x64/dxcompiler.lib)
+target_link_libraries(${PROJECT_NAME} ${THIRD_PARTY_DIR}/winpixeventruntime/bin/x64/WinPixEventRuntime.lib)
 
 # Copy thirdparty bins
 set(ASSIMP_BIN_DIR ${CMAKE_BINARY_DIR}/thirdParty/assimp/bin/$<CONFIGURATION>)
 set(DXC_BIN_DIR ${THIRD_PARTY_DIR}/DirectXShaderCompiler/bin/x64)
+set(WPER_BIN_DIR ${THIRD_PARTY_DIR}/winpixeventruntime/bin/x64)
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
 COMMAND ${CMAKE_COMMAND} -E copy_if_different
     "${ASSIMP_BIN_DIR}/assimp-vc143-mtd.dll"
@@ -77,5 +81,8 @@ COMMAND ${CMAKE_COMMAND} -E copy_if_different
     "${CMAKE_BINARY_DIR}/$<CONFIGURATION>"
 COMMAND ${CMAKE_COMMAND} -E copy_if_different
     "${DXC_BIN_DIR}/dxil.dll"
+    "${CMAKE_BINARY_DIR}/$<CONFIGURATION>"
+COMMAND ${CMAKE_COMMAND} -E copy_if_different
+    "${WPER_BIN_DIR}/WinPixEventRuntime.dll"
     "${CMAKE_BINARY_DIR}/$<CONFIGURATION>"
 )
