--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "thirdParty/assimp"]
 	path = thirdParty/assimp
 	url = https://github.com/assimp/assimp
-[submodule "thirdParty/DirectXTK12"]
-	path = thirdParty/DirectXTK12
-	url = https://github.com/microsoft/DirectXTK12
 [submodule "thirdParty/rapidjson"]
 	path = thirdParty/rapidjson
 	url = https://github.com/Tencent/rapidjson/
+[submodule "thirdParty/DirectX-Headers"]
+	path = thirdParty/DirectX-Headers
+	url = https://github.com/microsoft/DirectX-Headers
