part2 of prev commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,29 +10,40 @@ ADD_DEFINITIONS(-D_UNICODE)
 ADD_DEFINITIONS(-DUNICODE)
 ADD_DEFINITIONS(-D_DEBUG)
 ADD_DEFINITIONS(-D_WINDOWS)
-# ADD_DEFINITIONS(-DUSE_PIX_DEBUG)
+# ADD_DEFINITIONS(-DUSE_PIX_DEBUG) # for attaching only
 
 # VARs
+set(CMAKE_BUILD_PARALLEL_LEVEL 16)
 set(CMAKE_MFC_FLAG 2)
 set(CMAKE_CXX_STANDARD 17) # no need to manually adjust the CXXFLAGS
-# set(ROOT_FOLDER ${PROJECT_SOURCE_DIR}/..)
+set(CMAKE_CXX_STANDARD_REQUIRED on)
 set(ROOT_FOLDER ${PROJECT_SOURCE_DIR})
 set(THIRD_PARTY_DIR ${ROOT_FOLDER}/thirdParty)
 
 # include directories
 include_directories(${PROJECT_SOURCE_DIR})
+include_directories(${THIRD_PARTY_DIR}/DirectX-Headers/include)
+include_directories(${THIRD_PARTY_DIR}/DirectXTex/include)
 include_directories(${THIRD_PARTY_DIR}/assimp/include)
 include_directories(${CMAKE_BINARY_DIR}/thirdParty/assimp/include)
-include_directories(${THIRD_PARTY_DIR}/DirectXTK12/Inc)
 include_directories(${THIRD_PARTY_DIR}/DirectXShaderCompiler/inc)
 include_directories(${THIRD_PARTY_DIR}/rapidjson/include)
 include_directories(${THIRD_PARTY_DIR}/winpixeventruntime/Include)
+
 # message(STATUS "foo include dir: ${THIRD_PARTY_DIR}/assimp/include")
 # include_directories("C:\\code\\DX12Lib\\thirdParty\\assimp\\include")
 
 # 
-# add_subdirectory(${THIRD_PARTY_DIR}/assimp)
-# add_subdirectory(${THIRD_PARTY_DIR}/DirectXTK12)
+
+set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "Build tests" FORCE)
+set(ASSIMP_INSTALL OFF CACHE BOOL "Build as submodule" FORCE)
+add_subdirectory(${THIRD_PARTY_DIR}/assimp) #only needed first time to get bins
+add_subdirectory(${THIRD_PARTY_DIR}/DirectX-Headers)
+set(BUILD_TOOLS OFF CACHE BOOL "Build tex command-line tools" FORCE)
+set(BUILD_SAMPLE OFF CACHE BOOL "Build DDSView sample" FORCE)
+set(BUILD_DX11 OFF CACHE BOOL "Build with DirectX11 Runtime support" FORCE)
+add_subdirectory(${THIRD_PARTY_DIR}/DirectXTex)
+
 
 # source files
 add_executable(DX12Lib WIN32 main.cpp
@@ -65,29 +76,31 @@ include(CPack)
 target_link_options(${PROJECT_NAME} PRIVATE "/entry:WinMainCRTStartup")
 target_link_libraries(${PROJECT_NAME} d3d12.lib)
 target_link_libraries(${PROJECT_NAME} dxgi.lib)
-target_link_libraries(${PROJECT_NAME} ${CMAKE_BINARY_DIR}/thirdParty/assimp/lib/$<CONFIGURATION>/assimp-vc143-mtd.lib)
-target_link_libraries(${PROJECT_NAME} ${CMAKE_BINARY_DIR}/bin/CMake/$<CONFIGURATION>/DirectXTK12d.lib)
+# target_link_libraries(${PROJECT_NAME} ${CMAKE_BINARY_DIR}/thirdParty/assimp/lib/$<CONFIGURATION>/assimp-vc143-mtd.lib)
+target_link_libraries(${PROJECT_NAME} assimp)
 target_link_libraries(${PROJECT_NAME} ${THIRD_PARTY_DIR}/DirectXShaderCompiler/lib/x64/dxcompiler.lib)
 target_link_libraries(${PROJECT_NAME} ${THIRD_PARTY_DIR}/winpixeventruntime/bin/x64/WinPixEventRuntime.lib)
+target_link_libraries(${PROJECT_NAME} DirectX-Guids)
+target_link_libraries(${PROJECT_NAME} DirectXTex)
 
 # Copy thirdparty bins
-set(ASSIMP_BIN_DIR ${CMAKE_BINARY_DIR}/thirdParty/assimp/bin/$<CONFIGURATION>)
+set(ASSIMP_BIN_DIR ${CMAKE_BINARY_DIR}/thirdParty/assimp/bin/)
 set(DXC_BIN_DIR ${THIRD_PARTY_DIR}/DirectXShaderCompiler/bin/x64)
 set(WPER_BIN_DIR ${THIRD_PARTY_DIR}/winpixeventruntime/bin/x64)
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
 COMMAND ${CMAKE_COMMAND} -E copy_if_different
     "${ASSIMP_BIN_DIR}/assimp-vc143-mtd.dll"
-    "${CMAKE_BINARY_DIR}/$<CONFIGURATION>"
+    "${CMAKE_BINARY_DIR}"
 COMMAND ${CMAKE_COMMAND} -E copy_if_different
     "${ASSIMP_BIN_DIR}/assimp-vc143-mtd.pdb"
-    "${CMAKE_BINARY_DIR}/$<CONFIGURATION>"
+    "${CMAKE_BINARY_DIR}"
 COMMAND ${CMAKE_COMMAND} -E copy_if_different
     "${DXC_BIN_DIR}/dxcompiler.dll"
-    "${CMAKE_BINARY_DIR}/$<CONFIGURATION>"
+    "${CMAKE_BINARY_DIR}"
 COMMAND ${CMAKE_COMMAND} -E copy_if_different
     "${DXC_BIN_DIR}/dxil.dll"
-    "${CMAKE_BINARY_DIR}/$<CONFIGURATION>"
+    "${CMAKE_BINARY_DIR}"
 COMMAND ${CMAKE_COMMAND} -E copy_if_different
     "${WPER_BIN_DIR}/WinPixEventRuntime.dll"
-    "${CMAKE_BINARY_DIR}/$<CONFIGURATION>"
+    "${CMAKE_BINARY_DIR}"
 )
