added naive textures and srv desc table mapping, very naive

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,6 +89,7 @@
         "xutility": "cpp",
         "filesystem": "cpp",
         "*.idl": "cpp",
-        "*.inc": "cpp"
+        "*.inc": "cpp",
+        "cwctype": "cpp"
     }
 }
