--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -90,6 +90,21 @@
         "filesystem": "cpp",
         "*.idl": "cpp",
         "*.inc": "cpp",
-        "cwctype": "cpp"
+        "cwctype": "cpp",
+        "__bit_reference": "cpp",
+        "__bits": "cpp",
+        "__config": "cpp",
+        "__debug": "cpp",
+        "__errc": "cpp",
+        "__locale": "cpp",
+        "__mutex_base": "cpp",
+        "__node_handle": "cpp",
+        "__nullptr": "cpp",
+        "__split_buffer": "cpp",
+        "__string": "cpp",
+        "__threading_support": "cpp",
+        "__tree": "cpp",
+        "__tuple": "cpp",
+        "string_view": "cpp"
     }
 }
