added post processing cycle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,9 @@ add_executable(DX12Lib WIN32 main.cpp
     ConstantBufferManager.cpp
     CommandQueue.cpp
     GfxCommandQueue.cpp
-    Techniques.cpp)
+    Techniques.cpp
+    RenderQuad.cpp
+    RenderObject.cpp)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
