--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,8 @@ add_executable(DX12Lib WIN32 main.cpp
     GfxCommandQueue.cpp
     Techniques.cpp
     RenderQuad.cpp
-    RenderObject.cpp)
+    RenderObject.cpp
+    GpuDataManager.cpp)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
