--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,8 @@ add_executable(DX12Lib WIN32 main.cpp
     GpuDataManager.cpp
     MaterialManager.cpp
     RenderMesh.cpp
-    SkyBox.cpp)
+    SkyBox.cpp
+    DynamicGpuHeap.cpp)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
