--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "thirdParty/DirectXTex"]
 	path = thirdParty/DirectXTex
 	url = https://github.com/microsoft/DirectXTex
+[submodule "thirdParty/imgui"]
+	path = thirdParty/imgui
+	url = https://github.com/ocornut/imgui.git
