intermediate commit: need to render terrain, write shaders for it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,7 @@ add_executable(DX12Lib WIN32 main.cpp
     ImguiHelper.cpp
     Console.cpp
     ConsoleCommands.cpp
+    Terrain.cpp
     )
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
