forward + water added + blending + animation want simple fog

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,8 @@ add_executable(DX12Lib WIN32 main.cpp
     ImguiHelper.cpp
     Console.cpp
     ConsoleCommands.cpp
-    Terrain.cpp
+    Plane.cpp
+    Water.cpp
     )
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
