added commandlist class to wrap dx12 cmd list

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -80,6 +80,7 @@ add_executable(DX12Lib WIN32 main.cpp
     ConsoleCommands.cpp
     Plane.cpp
     Sun.cpp
+    CommandList.cpp
     )
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
