some refactoring of command list, queue, heaps, descriptors

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -82,6 +82,7 @@ add_executable(DX12Lib WIN32 main.cpp
     Sun.cpp
     CommandList.cpp
     Reflections.cpp
+    Fence.cpp
     )
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
