--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "thirdParty/imgui"]
 	path = thirdParty/imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "thirdParty/DirectXMath"]
+	path = thirdParty/DirectXMath
+	url = https://github.com/microsoft/DirectXMath.git
