linux build almost there

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,40 +4,27 @@ project(DX12Lib VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
+if(WIN32)
 ADD_DEFINITIONS(-D_AFXDLL)
 ADD_DEFINITIONS(-DWIN32)
 ADD_DEFINITIONS(-D_UNICODE)
 ADD_DEFINITIONS(-DUNICODE)
 ADD_DEFINITIONS(-D_DEBUG)
 ADD_DEFINITIONS(-D_WINDOWS)
-# ADD_DEFINITIONS(-DUSE_PIX_DEBUG) # for attaching only
-
-# VARs
-set(CMAKE_BUILD_PARALLEL_LEVEL 16)
 set(CMAKE_MFC_FLAG 2)
+else()
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+endif()
+
+set(CMAKE_BUILD_PARALLEL_LEVEL 16)
 set(CMAKE_CXX_STANDARD 17) # no need to manually adjust the CXXFLAGS
 set(CMAKE_CXX_STANDARD_REQUIRED on)
 set(ROOT_FOLDER ${PROJECT_SOURCE_DIR})
 set(THIRD_PARTY_DIR ${ROOT_FOLDER}/../thirdParty)
 
-
-# include directories
-include_directories(${PROJECT_SOURCE_DIR})
-include_directories(${PROJECT_SOURCE_DIR}/backend_interface)
-
-
-include_directories(${THIRD_PARTY_DIR}/assimp/include)
-include_directories(${CMAKE_BINARY_DIR}/thirdParty/assimp/include)
-include_directories(${THIRD_PARTY_DIR}/rapidjson/include)
-
-# message(STATUS "foo include dir: ${THIRD_PARTY_DIR}/assimp/include")
-# include_directories("C:\\code\\DX12Lib\\thirdParty\\assimp\\include")
-
-# 
-add_subdirectory(backend_dx12)
-
-# source files
-add_executable(DX12Lib WIN32 main.cpp
+if(WIN32)
+add_executable(${PROJECT_NAME}  WIN32 main.cpp
     WinApplication.cpp
     FileManager.cpp
     Frontend.cpp
@@ -63,28 +50,53 @@ add_executable(DX12Lib WIN32 main.cpp
     Sun.cpp
     Reflections.cpp
 )
+else()
+add_executable(${PROJECT_NAME}   main.cpp
+    LinApplication.cpp
+    FileManager.cpp
+    Frontend.cpp
+    RenderModel.cpp
+    ResourceManager.cpp
 
-set(CPACK_PROJECT_NAME ${PROJECT_NAME})
-set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
-#include(CPack)
+    Transformations.cpp
+    Level.cpp
+    FreeCamera.cpp
 
+    LevelEntity.cpp
+    ConstantBufferManager.cpp
+
+    RenderQuad.cpp
+    RenderObject.cpp
+    GpuDataManager.cpp
+    MaterialManager.cpp
+    RenderMesh.cpp
+    SkyBox.cpp
+    SSAO.cpp
+
+    Plane.cpp
+    Sun.cpp
+    Reflections.cpp
+)
+endif()
+
+if (WIN32)
 target_compile_options(${PROJECT_NAME} PUBLIC  "/EHsc")
-
 target_link_options(${PROJECT_NAME} PRIVATE "/entry:WinMainCRTStartup")
+endif()
 
-# target_link_libraries(${PROJECT_NAME} ${CMAKE_BINARY_DIR}/thirdParty/assimp/lib/$<CONFIGURATION>/assimp-vc143-mtd.lib)
+target_include_directories(${PROJECT_NAME}  PUBLIC ${THIRD_PARTY_DIR}/rapidjson/include)
+target_include_directories(${PROJECT_NAME}  PUBLIC ${PROJECT_SOURCE_DIR}/backend_interface)
+target_include_directories(${PROJECT_NAME}  PUBLIC ${THIRD_PARTY_DIR}/assimp/include)
+target_include_directories(${PROJECT_NAME}  PUBLIC ${CMAKE_BINARY_DIR}/thirdParty/assimp/include)
+target_include_directories(${PROJECT_NAME}  PUBLIC ${THIRD_PARTY_DIR}/DirectXMath/Inc)
+
+
+# target_link_libraries(${PROJECT_NAME} dl)
+# target_link_libraries(${PROJECT_NAME} pthread)
+
 target_link_libraries(${PROJECT_NAME} assimp)
 
-#target_link_libraries(${PROJECT_NAME} DirectX-Guids)
-
-
-target_link_libraries(${PROJECT_NAME} backend_dx12)
-
-
-# Copy thirdparty bins
-set(ASSIMP_BIN_DIR ${CMAKE_BINARY_DIR}/thirdParty/assimp/bin/)
-
-
+if (WIN32)
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
 COMMAND ${CMAKE_COMMAND} -E copy_if_different
     "${ASSIMP_BIN_DIR}/assimp-vc143-mtd.dll"
@@ -99,3 +111,4 @@ COMMAND ${CMAKE_COMMAND} -E copy_if_different
     "${CMAKE_BINARY_DIR}/src/backend_dx12/backend_dx12d.pdb"
     "${CMAKE_BINARY_DIR}/src"
 )
+endif()
