--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -76,7 +76,7 @@ endif()
 if(WIN32)
 add_subdirectory(backend_dx12)
 else()
-add_subdirectory(backend_vk)
+# add_subdirectory(backend_vk)
 endif()
 
 if (WIN32)
@@ -84,7 +84,7 @@ target_compile_options(${PROJECT_NAME} PUBLIC "/EHsc")
 target_link_options(${PROJECT_NAME} PRIVATE "/entry:WinMainCRTStartup")
 target_link_libraries(${PROJECT_NAME} backend_dx12)
 else()
-target_link_libraries(${PROJECT_NAME} backend_vk)
+# target_link_libraries(${PROJECT_NAME} backend_vk)
 find_package(PkgConfig REQUIRED)
 find_package(Vulkan REQUIRED)
 target_link_libraries(${PROJECT_NAME} Vulkan::Vulkan)
